--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
