--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "firebase": "^10.13.1",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
