--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
     "firebase": "^10.13.1",
+    "js-cookies": "^1.0.4",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
